@@ -54,6 +54,7 @@ import java.util.TimeZone;
 import java.util.Vector;
 import java.util.concurrent.ExecutionException;
 
+import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
@@ -102,6 +103,7 @@ import lucee.runtime.image.ImageUtil;
 import lucee.runtime.interpreter.CFMLExpressionInterpreter;
 import lucee.runtime.interpreter.VariableInterpreter;
 import lucee.runtime.java.JavaObject;
+import lucee.runtime.listener.AppListenerUtil;
 import lucee.runtime.op.date.DateCaster;
 import lucee.runtime.op.validators.ValidateCreditCard;
 import lucee.runtime.reflection.Reflector;
@@ -235,6 +237,10 @@ public final class Caster {
 		return d != 0;
 	}
 
+	public static boolean toBooleanValue(Number n) {
+		return n.intValue() != 0;
+	}
+
 	/**
 	 * cast a double value to a boolean value (primitive value type)
 	 * 
@@ -304,12 +310,12 @@ public final class Caster {
 	 * @throws PageException
 	 */
 	public static Double toDouble(float f) {
-		return new Double(f);
+		return Double.valueOf(f);
 
 	}
 
 	public static Double toDouble(Float f) {
-		return new Double(f.doubleValue());
+		return Double.valueOf(f.doubleValue());
 	}
 
 	/**
@@ -321,8 +327,44 @@ public final class Caster {
 	 */
 	public static Double toDouble(Object o) throws PageException {
 		if (o instanceof Double) return (Double) o;
-		return new Double(toDoubleValue(o));
+		return Double.valueOf(toDoubleValue(o));
 
+	}
+
+	public static Number toNumber(PageContext pc, Object o) throws PageException {
+		if (o instanceof Number) return (Number) o;
+		if (AppListenerUtil.getPreciseMath(pc, null)) return toBigDecimal(o);
+		return Double.valueOf(toDoubleValue(o));
+
+	}
+
+	public static Number toNumber(Object o) throws PageException {
+		if (o instanceof Number) return (Number) o;
+		if (AppListenerUtil.getPreciseMath(null, null)) return toBigDecimal(o);
+		return Double.valueOf(toDoubleValue(o));
+
+	}
+
+	public static Number toNumber(boolean b) throws PageException {
+		if (AppListenerUtil.getPreciseMath(null, null)) return b ? BigDecimal.ONE : BigDecimal.ZERO;
+		return Double.valueOf(b ? 1d : 0d);
+
+	}
+
+	public static Number toNumber(double d) throws PageException {
+		if (AppListenerUtil.getPreciseMath(null, null)) return BigDecimal.valueOf(d);
+		return Double.valueOf(d);
+
+	}
+
+	public static Number toNumber(String str) throws PageException {
+		if (AppListenerUtil.getPreciseMath(null, null)) return toBigDecimal(str);
+		return toDouble(str);
+	}
+
+	public static Number toNumber(PageContext pc, String str) throws PageException {
+		if (AppListenerUtil.getPreciseMath(pc, null)) return toBigDecimal(str);
+		return toDouble(str);
 	}
 
 	/**
@@ -363,7 +405,7 @@ public final class Caster {
 	private static final Object DEFAULT = new Object();
 	static {
 		for (int i = 0; i < MAX_SMALL_DOUBLE; i++)
-			smallDoubles[i] = new Double(i);
+			smallDoubles[i] = Double.valueOf(i);
 	}
 
 	public static Double toDouble(double d) {
@@ -371,7 +413,11 @@ public final class Caster {
 			int i;
 			if ((i = ((int) d)) == d) return smallDoubles[i];
 		}
-		return new Double(d);
+		return Double.valueOf(d);
+	}
+
+	public static Double toDouble(Number n) {
+		return n.doubleValue();
 	}
 
 	/**
@@ -381,7 +427,11 @@ public final class Caster {
 	 * @return casted Double Object
 	 */
 	public static Double toDouble(boolean b) {
-		return new Double(b ? 1 : 0);
+		return Double.valueOf(b ? 1 : 0);
+	}
+
+	public static Double toDouble(Boolean b) {
+		return Double.valueOf(b ? 1 : 0);
 	}
 
 	/**
@@ -665,6 +715,10 @@ public final class Caster {
 		return d;
 	}
 
+	public static double toDoubleValue(Number n) {
+		return n.doubleValue();
+	}
+
 	public static double toDoubleValue(float f) {
 		return f;
 	}
@@ -680,6 +734,10 @@ public final class Caster {
 	 * @return casted double value
 	 */
 	public static double toDoubleValue(boolean b) {
+		return b ? 1 : 0;
+	}
+
+	public static double toDoubleValue(Boolean b) {
 		return b ? 1 : 0;
 	}
 
@@ -777,6 +835,10 @@ public final class Caster {
 		return (int) d;
 	}
 
+	public static int toIntValue(Number n) {
+		return n.intValue();
+	}
+
 	/**
 	 * cast an int value to an int value (do nothing)
 	 * 
@@ -794,6 +856,10 @@ public final class Caster {
 	 * @return casted int value
 	 */
 	public static int toIntValue(boolean b) {
+		return b ? 1 : 0;
+	}
+
+	public static int toIntValue(Boolean b) {
 		return b ? 1 : 0;
 	}
 
@@ -926,6 +992,10 @@ public final class Caster {
 		return b ? Boolean.TRUE : Boolean.FALSE;
 	}
 
+	public static Boolean toBoolean(Boolean b) {
+		return b;
+	}
+
 	/**
 	 * cast a char value to a Boolean Object(reference type)
 	 * 
@@ -944,6 +1014,10 @@ public final class Caster {
 	 */
 	public static Boolean toBoolean(int i) {
 		return i != 0 ? Boolean.TRUE : Boolean.FALSE;
+	}
+
+	public static Boolean toBoolean(Number n) {
+		return n.intValue() != 0 ? Boolean.TRUE : Boolean.FALSE;
 	}
 
 	/**
@@ -1057,6 +1131,10 @@ public final class Caster {
 		return (char) (b ? 1 : 0);
 	}
 
+	public static char toCharValue(Boolean b) {
+		return (char) (b.booleanValue() ? 1 : 0);
+	}
+
 	/**
 	 * cast a double value to a char value (primitive value type)
 	 * 
@@ -1065,6 +1143,10 @@ public final class Caster {
 	 */
 	public static char toCharValue(double d) {
 		return (char) d;
+	}
+
+	public static char toCharValue(Number n) {
+		return (char) n.intValue();
 	}
 
 	/**
@@ -1146,7 +1228,11 @@ public final class Caster {
 	 * @return casted Character Object
 	 */
 	public static Character toCharacter(boolean b) {
-		return new Character(toCharValue(b));
+		return Character.valueOf(toCharValue(b));
+	}
+
+	public static Character toCharacter(Boolean b) {
+		return Character.valueOf(toCharValue(b));
 	}
 
 	/**
@@ -1167,6 +1253,10 @@ public final class Caster {
 	 */
 	public static Character toCharacter(double d) {
 		return new Character(toCharValue(d));
+	}
+
+	public static Character toCharacter(Number n) {
+		return new Character(toCharValue(n));
 	}
 
 	/**
@@ -1220,6 +1310,10 @@ public final class Caster {
 		return (byte) (b ? 1 : 0);
 	}
 
+	public static byte toByteValue(Boolean b) {
+		return (byte) (b.booleanValue() ? 1 : 0);
+	}
+
 	/**
 	 * cast a double value to a byte value (primitive value type)
 	 * 
@@ -1228,6 +1322,10 @@ public final class Caster {
 	 */
 	public static byte toByteValue(double d) {
 		return (byte) d;
+	}
+
+	public static byte toByteValue(Number n) {
+		return n.byteValue();
 	}
 
 	/**
@@ -1298,7 +1396,11 @@ public final class Caster {
 	 * @return casted Byte Object
 	 */
 	public static Byte toByte(boolean b) {
-		return new Byte(toByteValue(b));
+		return Byte.valueOf(toByteValue(b));
+	}
+
+	public static Byte toByte(Boolean b) {
+		return Byte.valueOf(toByteValue(b));
 	}
 
 	/**
@@ -1318,7 +1420,11 @@ public final class Caster {
 	 * @return casted Byte Object
 	 */
 	public static Byte toByte(double d) {
-		return new Byte(toByteValue(d));
+		return Byte.valueOf(toByteValue(d));
+	}
+
+	public static Byte toByte(Number n) {
+		return Byte.valueOf(toByteValue(n));
 	}
 
 	/**
@@ -1371,6 +1477,10 @@ public final class Caster {
 		return (b ? 1L : 0L);
 	}
 
+	public static long toLongValue(Boolean b) {
+		return (b ? 1L : 0L);
+	}
+
 	/**
 	 * cast a double value to a long value (primitive value type)
 	 * 
@@ -1379,6 +1489,10 @@ public final class Caster {
 	 */
 	public static long toLongValue(double d) {
 		return (long) d;
+	}
+
+	public static long toLongValue(Number n) {
+		return n.longValue();
 	}
 
 	/**
@@ -1498,6 +1612,10 @@ public final class Caster {
 		return Long.valueOf(toLongValue(b));
 	}
 
+	public static Long toLong(Boolean b) {
+		return Long.valueOf(toLongValue(b.booleanValue()));
+	}
+
 	/**
 	 * cast a char value to a Long Object(reference type)
 	 * 
@@ -1516,6 +1634,10 @@ public final class Caster {
 	 */
 	public static Long toLong(double d) {
 		return Long.valueOf(toLongValue(d));
+	}
+
+	public static Long toLong(Number n) {
+		return Long.valueOf(n.longValue());
 	}
 
 	/**
@@ -1577,7 +1699,11 @@ public final class Caster {
 	 * @return casted Float Object
 	 */
 	public static Float toFloat(boolean b) {
-		return new Float(toFloatValue(b));
+		return Float.valueOf(toFloatValue(b));
+	}
+
+	public static Float toFloat(Boolean b) {
+		return Float.valueOf(toFloatValue(b.booleanValue()));
 	}
 
 	/**
@@ -1587,7 +1713,7 @@ public final class Caster {
 	 * @return casted Float Object
 	 */
 	public static Float toFloat(char c) {
-		return new Float(toFloatValue(c));
+		return Float.valueOf(toFloatValue(c));
 	}
 
 	/**
@@ -1597,7 +1723,15 @@ public final class Caster {
 	 * @return casted Float Object
 	 */
 	public static Float toFloat(double d) {
-		return new Float(toFloatValue(d));
+		return Float.valueOf(toFloatValue(d));
+	}
+
+	public static Float toFloat(Number n) {
+		return n.floatValue();
+	}
+
+	public static float toFloatValue(Number n) {
+		return Float.valueOf(n.floatValue());
 	}
 
 	/**
@@ -1646,6 +1780,10 @@ public final class Caster {
 	 * @return casted long value
 	 */
 	public static float toFloatValue(boolean b) {
+		return (b ? 1F : 0F);
+	}
+
+	public static float toFloatValue(Boolean b) {
 		return (b ? 1F : 0F);
 	}
 
@@ -1730,6 +1868,10 @@ public final class Caster {
 		return (short) (b ? 1 : 0);
 	}
 
+	public static short toShortValue(Boolean b) {
+		return (short) (b ? 1 : 0);
+	}
+
 	/**
 	 * cast a double value to a short value (primitive value type)
 	 * 
@@ -1738,6 +1880,10 @@ public final class Caster {
 	 */
 	public static short toShortValue(double d) {
 		return (short) d;
+	}
+
+	public static short toShortValue(Number n) {
+		return n.shortValue();
 	}
 
 	/**
@@ -1812,6 +1958,10 @@ public final class Caster {
 		return Short.valueOf(toShortValue(b));
 	}
 
+	public static Short toShort(Boolean b) {
+		return Short.valueOf(toShortValue(b.booleanValue()));
+	}
+
 	/**
 	 * cast a char value to a Short Object(reference type)
 	 * 
@@ -1830,6 +1980,10 @@ public final class Caster {
 	 */
 	public static Short toShort(double d) {
 		return Short.valueOf(toShortValue(d));
+	}
+
+	public static Short toShort(Number n) {
+		return Short.valueOf(n.shortValue());
 	}
 
 	/**
@@ -2131,10 +2285,8 @@ public final class Caster {
 	}
 
 	private static DecimalFormat df = (DecimalFormat) DecimalFormat.getInstance(Locale.US);// ("#.###########");
-	private static DecimalFormat dfp = (DecimalFormat) DecimalFormat.getInstance(Locale.US);// ("#.###########");
 	static {
-		df.applyLocalizedPattern("#.############");
-		dfp.applyLocalizedPattern("#.###############");
+		df.applyLocalizedPattern("#.########################");
 	}
 
 	public static String toString(double d) {
@@ -2148,6 +2300,7 @@ public final class Caster {
 	}
 
 	public static String toString(Number n) {
+		if (n instanceof BigDecimal) return df.format(n);
 		double d = n.doubleValue();
 		long l = (long) d;
 		if (l == d) return toString(l);
@@ -2160,31 +2313,8 @@ public final class Caster {
 		// return df.format(d);
 	}
 
-	public static String toStringPrecise(double d) {
-		long l = (long) d;
-		if (l == d) return toString(l);
-
-		if (d > l && (d - l) < 0.000000000000001) return toString(l);
-		if (l > d && (l - d) < 0.000000000000001) return toString(l);
-
-		return dfp.format(d);
-	}
-
-	public static String format(double d) {
-		return dfp.format(d);
-	}
-
-	public static String toStringPrecise(Number n) {
-		double d = n.doubleValue();
-		long l = (long) d;
-		if (l == d) return toString(l);
-
-		if (d > l && (d - l) < 0.000000000000001) return toString(l);
-		if (l > d && (l - d) < 0.000000000000001) return toString(l);
-
-		if (n instanceof Double) return toString(n.doubleValue());
-		return n.toString();
-		// return df.format(d);
+	public static String toString(BigDecimal bd) {
+		return df.format(bd);
 	}
 
 	/**
@@ -2218,6 +2348,10 @@ public final class Caster {
 	 * @return casted String
 	 */
 	public static String toString(boolean b) {
+		return b ? "true" : "false";
+	}
+
+	public static String toString(Boolean b) {
 		return b ? "true" : "false";
 	}
 
@@ -2335,6 +2469,15 @@ public final class Caster {
 			return toList(((ObjectWrap) o).getEmbededObject());
 		}
 		else if (o instanceof Struct) {
+			if (o instanceof Component) {
+				try {
+					Object tmp = Reflector.componentToClass(ThreadLocalPageContext.get(), (Component) o, List.class);
+					if (tmp instanceof List) return (List) tmp;
+				}
+				catch (PageException e) {
+				}
+			}
+
 			Struct sct = (Struct) o;
 			ArrayList arr = new ArrayList();
 
@@ -2646,6 +2789,14 @@ public final class Caster {
 	 */
 	public static Map toMap(Object o, boolean duplicate) throws PageException {
 		if (o instanceof Struct) {
+			if (o instanceof Component) {
+				try {
+					Object tmp = Reflector.componentToClass(ThreadLocalPageContext.get(), (Component) o, Map.class);
+					if (tmp instanceof Map) return (Map) tmp;
+				}
+				catch (PageException e) {
+				}
+			}
 			if (duplicate) return (Map) Duplicator.duplicate(o, false);
 			return ((Struct) o);
 		}
@@ -2913,6 +3064,10 @@ public final class Caster {
 		return DateCaster.toDateSimple(b, tz);
 	}
 
+	public static DateTime toDate(Boolean b, TimeZone tz) {
+		return DateCaster.toDateSimple(b, tz);
+	}
+
 	/**
 	 * cast a char to a DateTime Object
 	 * 
@@ -2933,6 +3088,10 @@ public final class Caster {
 	 */
 	public static DateTime toDate(double d, TimeZone tz) {
 		return DateCaster.toDateSimple(d, tz);
+	}
+
+	public static DateTime toDate(Number n, TimeZone tz) {
+		return DateCaster.toDateSimple(n.doubleValue(), tz);
 	}
 
 	/**
@@ -3581,174 +3740,178 @@ public final class Caster {
 	 * @throws PageException
 	 */
 	public static Object castTo(PageContext pc, String type, Object o, boolean alsoPattern) throws PageException {
-		type = StringUtil.toLowerCase(type).trim();
-		if (type.length() > 2) {
-			char first = type.charAt(0);
+		type = type.trim();
+		String lctype = StringUtil.toLowerCase(type);
+		if (lctype.length() > 2) {
+			char first = lctype.charAt(0);
 			switch (first) {
 			case 'a':
-				if (type.equals("any")) {
+				if (lctype.equals("any")) {
 					return o;
 				}
-				else if (type.equals("array")) {
+				else if (lctype.equals("array")) {
 					return toArray(o);
 				}
 				break;
 			case 'b':
-				if (type.equals("boolean") || type.equals("bool")) {
+				if (lctype.equals("boolean") || lctype.equals("bool")) {
 					return toBoolean(o);
 				}
-				else if (type.equals("binary")) {
+				else if (lctype.equals("binary")) {
 					return toBinary(o);
 				}
-				else if (type.equals("byte[]")) {
+				else if (lctype.equals("byte[]")) {
 					return toBinary(o);
 				}
-				else if (type.equals("base64")) {
+				else if (lctype.equals("base64")) {
 					return toBase64(o, null);
 				}
-				else if (type.equals("bigdecimal") || type.equals("big_decimal")) {
+				else if (lctype.equals("bigdecimal") || lctype.equals("big_decimal")) {
 					return toBigDecimal(o);
 				}
-				else if (type.equals("biginteger") || type.equals("big_integer")) {
+				else if (lctype.equals("biginteger") || lctype.equals("big_integer")) {
 					return toBigInteger(o);
 				}
 				break;
 			case 'c':
-				if (alsoPattern && type.equals("creditcard")) {
+				if (alsoPattern && lctype.equals("creditcard")) {
 					return toCreditCard(o);
 				}
 				break;
 			case 'd':
-				if (type.equals("date")) {
+				if (lctype.equals("date")) {
 					return DateCaster.toDateAdvanced(o, pc.getTimeZone());
 				}
-				else if (type.equals("datetime")) {
+				else if (lctype.equals("datetime")) {
 					return DateCaster.toDateAdvanced(o, pc.getTimeZone());
 				}
-				else if (type.equals("double")) {
+				else if (lctype.equals("double")) {
 					return toDouble(o);
 				}
-				else if (type.equals("decimal")) {
+				else if (lctype.equals("decimal")) {
 					return toDecimal(o);
 				}
 				break;
 			case 'e':
-				if (type.equals("eurodate")) {
+				if (lctype.equals("eurodate")) {
 					return DateCaster.toEuroDate(o, pc.getTimeZone());
 				}
-				else if (alsoPattern && type.equals("email")) {
+				else if (alsoPattern && lctype.equals("email")) {
 					return toEmail(o);
 				}
 				break;
 			case 'f':
-				if (type.equals("float")) {
+				if (lctype.equals("float")) {
 					return toDouble(o);
 				}
-				else if (type.equals("function")) {
+				else if (lctype.equals("function")) {
 					return toFunction(o);
 				}
 				break;
 			case 'g':
-				if (type.equals("guid")) {
+				if (lctype.equals("guid")) {
 					return toGUId(o);
 				}
 				break;
 			case 'i':
-				if (type.equals("integer") || type.equals("int")) {
+				if (lctype.equals("integer") || lctype.equals("int")) {
 					return toInteger(o);
 				}
 				break;
 			case 'l':
-				if (type.equals("long")) {
+				if (lctype.equals("long")) {
 					return toLong(o);
 				}
 				break;
 			case 'n':
-				if (type.equals("numeric")) {
+				if (lctype.equals("numeric")) {
 					return toDouble(o);
 				}
-				else if (type.equals("number")) {
+				else if (lctype.equals("number")) {
 					return toDouble(o);
 				}
-				else if (type.equals("node")) {
+				else if (lctype.equals("node")) {
 					return toXML(o);
 				}
 				break;
 			case 'o':
-				if (type.equals("object")) {
+				if (lctype.equals("object")) {
 					return o;
 				}
-				else if (type.equals("other")) {
+				else if (lctype.equals("other")) {
 					return o;
+				}
+				else if (lctype.equals("org.w3c.dom.element")) {
+					return toElement(o);
 				}
 				break;
 			case 'p':
-				if (alsoPattern && type.equals("phone")) {
+				if (alsoPattern && lctype.equals("phone")) {
 					return toPhone(o);
 				}
 				break;
 			case 'q':
-				if (type.equals("query")) {
+				if (lctype.equals("query")) {
 					return toQuery(o);
 				}
 				break;
 			case 's':
-				if (type.equals("string")) {
+				if (lctype.equals("string")) {
 					return toString(o);
 				}
-				else if (type.equals("struct")) {
+				else if (lctype.equals("struct")) {
 					return toStruct(o);
 				}
-				else if (type.equals("short")) {
+				else if (lctype.equals("short")) {
 					return toShort(o);
 				}
-				else if (alsoPattern && (type.equals("ssn") || type.equals("social_security_number"))) {
+				else if (alsoPattern && (lctype.equals("ssn") || lctype.equals("social_security_number"))) {
 					return toSSN(o);
 				}
 				break;
 			case 't':
-				if (type.equals("timespan")) {
+				if (lctype.equals("timespan")) {
 					return toTimespan(o);
 				}
-				if (type.equals("time")) {
+				if (lctype.equals("time")) {
 					return DateCaster.toDateAdvanced(o, pc.getTimeZone());
 				}
-				if (alsoPattern && type.equals("telephone")) {
+				if (alsoPattern && lctype.equals("telephone")) {
 					return toPhone(o);
 				}
 				break;
 			case 'u':
-				if (type.equals("uuid")) {
+				if (lctype.equals("uuid")) {
 					return toUUId(o);
 				}
-				if (alsoPattern && type.equals("url")) {
+				if (alsoPattern && lctype.equals("url")) {
 					return toURL(o);
 				}
-				if (type.equals("usdate")) {
+				if (lctype.equals("usdate")) {
 					return DateCaster.toUSDate(o, pc.getTimeZone());
 					// return DateCaster.toDate(o,pc.getTimeZone());
 				}
 				break;
 			case 'v':
-				if (type.equals("variablename")) {
+				if (lctype.equals("variablename")) {
 					return toVariableName(o);
 				}
-				else if (type.equals("void")) {
+				else if (lctype.equals("void")) {
 					return toVoid(o);
 				}
-				else if (type.equals("variable_name")) {
+				else if (lctype.equals("variable_name")) {
 					return toVariableName(o);
 				}
-				else if (type.equals("variable-name")) {
+				else if (lctype.equals("variable-name")) {
 					return toVariableName(o);
 				}
 				break;
 			case 'x':
-				if (type.equals("xml")) {
+				if (lctype.equals("xml")) {
 					return toXML(o);
 				}
 			case 'z':
-				if (alsoPattern && (type.equals("zip") || type.equals("zipcode"))) {
+				if (alsoPattern && (lctype.equals("zip") || lctype.equals("zipcode"))) {
 					return toZip(o);
 				}
 				break;
@@ -3756,8 +3919,8 @@ public final class Caster {
 		}
 
 		// <type>[]
-		if (type.endsWith("[]")) {
-			String componentType = type.substring(0, type.length() - 2);
+		if (lctype.endsWith("[]")) {
+			String componentType = lctype.substring(0, lctype.length() - 2);
 			Object[] src = toNativeArray(o);
 			Array trg = new ArrayImpl();
 			for (int i = 0; i < src.length; i++) {
@@ -3923,8 +4086,31 @@ public final class Caster {
 		if (o instanceof Component) {
 			Component comp = ((Component) o);
 			if (comp.instanceOf(strType)) return o;
+
+			try {
+				Class<?> trgClass = ClassUtil.loadClass(strType);
+				if (trgClass.isInterface()) {
+					return Reflector.componentToClass(pc, comp, trgClass);
+				}
+			}
+			catch (ClassException ce) {
+				throw Caster.toPageException(ce);
+			}
+
 			throw new ExpressionException("can't cast Component of Type [" + comp.getAbsName() + "] to [" + strType + "]");
 		}
+		if (o instanceof UDF) {
+			try {
+				Class<?> trgClass = ClassUtil.loadClass(strType);
+				if (trgClass.isInterface()) {
+					return Reflector.udfToClass(pc, (UDF) o, trgClass);
+				}
+			}
+			catch (ClassException ce) {
+				throw Caster.toPageException(ce);
+			}
+		}
+
 		if (o instanceof Pojo) {
 			Component cfc = toComponent(pc, ((Pojo) o), strType, null);
 			if (cfc != null) return cfc;
@@ -4165,7 +4351,7 @@ public final class Caster {
 	 * @return casted Double
 	 */
 	public static Double toRef(double d) {
-		return new Double(d);
+		return Double.valueOf(d);
 	}
 
 	/**
@@ -4199,6 +4385,14 @@ public final class Caster {
 	public static Collection toCollection(Object o) throws PageException {
 		if (o instanceof Collection) return (Collection) o;
 		else if (o instanceof Node) return XMLCaster.toXMLStruct((Node) o, false);
+		else if (o instanceof Component) {
+			try {
+				Object tmp = Reflector.componentToClass(ThreadLocalPageContext.get(), (Component) o, Collection.class);
+				if (tmp instanceof Collection) return (Collection) tmp;
+			}
+			catch (PageException e) {
+			}
+		}
 		else if (o instanceof Map) {
 			return MapAsStruct.toStruct((Map) o, true);// StructImpl((Map)o);
 		}
@@ -4249,6 +4443,14 @@ public final class Caster {
 	public static Collection toCollection(Object o, Collection defaultValue) {
 		if (o instanceof Collection) return (Collection) o;
 		else if (o instanceof Node) return XMLCaster.toXMLStruct((Node) o, false);
+		else if (o instanceof Component) {
+			try {
+				Object tmp = Reflector.componentToClass(ThreadLocalPageContext.get(), (Component) o, Collection.class);
+				if (tmp instanceof Collection) return (Collection) tmp;
+			}
+			catch (PageException e) {
+			}
+		}
 		else if (o instanceof Map) {
 			return MapAsStruct.toStruct((Map) o, true);
 		}
@@ -4451,12 +4653,29 @@ public final class Caster {
 	}
 
 	/**
+	 * casts an Object to a XML Element
+	 * 
+	 * @param o Object to Cast
+	 * @return Element from Object
+	 * @throws PageException
+	 */
+
+	public static Element toElement(Object o) throws PageException {
+		if (o instanceof Element) return (Element) o;
+		throw new CasterException(o, "org.w3c.dom.Element");
+	}
+
+	/**
 	 * casts a boolean to an Integer
 	 * 
 	 * @param b
 	 * @return Integer from boolean
 	 */
 	public static Integer toInteger(boolean b) {
+		return b ? Constants.INTEGER_1 : Constants.INTEGER_0;
+	}
+
+	public static Integer toInteger(Boolean b) {
 		return b ? Constants.INTEGER_1 : Constants.INTEGER_0;
 	}
 
@@ -4478,6 +4697,10 @@ public final class Caster {
 	 */
 	public static Integer toInteger(double d) {
 		return Integer.valueOf((int) d);
+	}
+
+	public static Integer toInteger(Number n) {
+		return Integer.valueOf(n.intValue());
 	}
 
 	/**
@@ -4741,7 +4964,15 @@ public final class Caster {
 
 		if (Reflector.isInstaneOf(obj.getClass(), trgClass, false)) return obj;
 
-		return Caster.castTo(pc, Caster.toClassName(trgClass), obj, false);
+		if (obj instanceof Component) {
+			if (trgClass == Component.class) return obj;
+			Component comp = ((Component) obj);
+			if (trgClass.isInterface()) { // TODO allow not only intefaces
+				return Reflector.componentToClass(pc, comp, trgClass);
+			}
+		}
+
+		return castTo(pc, Caster.toClassName(trgClass), obj, false);
 	}
 
 	public static Objects toObjects(PageContext pc, Object obj) throws PageException {
@@ -4753,7 +4984,7 @@ public final class Caster {
 	public static BigDecimal toBigDecimal(Object o) throws PageException {
 		if (o instanceof BigDecimal) return (BigDecimal) o;
 		if (o instanceof Number) {
-			return new BigDecimal(((Number) o).toString());
+			return BigDecimal.valueOf(((Number) o).doubleValue());
 		}
 		else if (o instanceof Boolean) return new BigDecimal(((Boolean) o).booleanValue() ? 1 : 0);
 		else if (o instanceof CharSequence) return new BigDecimal(o.toString());
@@ -4762,6 +4993,24 @@ public final class Caster {
 		else if (o == null) return BigDecimal.ZERO;
 		else if (o instanceof ObjectWrap) return toBigDecimal(((ObjectWrap) o).getEmbededObject());
 		throw new CasterException(o, "number");
+	}
+
+	public static BigDecimal toBigDecimal(Number n) {
+		if (n instanceof BigDecimal) return (BigDecimal) n;
+		return BigDecimal.valueOf(n.doubleValue());
+	}
+
+	public static BigDecimal toBigDecimal(String str) throws CasterException {
+		return new BigDecimal(str);
+	}
+
+	public static BigDecimal toBigDecimal(String str, BigDecimal defaultValue) {
+		try {
+			return new BigDecimal(str);
+		}
+		catch (Exception e) {
+		}
+		return defaultValue;
 	}
 
 	public static BigInteger toBigInteger(Object o) throws PageException {
@@ -4803,11 +5052,28 @@ public final class Caster {
 
 	public static CharSequence toCharSequence(Object obj) throws PageException {
 		if (obj instanceof CharSequence) return (CharSequence) obj;
+		if (obj instanceof Component) {
+			try {
+				Object tmp = Reflector.componentToClass(ThreadLocalPageContext.get(), (Component) obj, CharSequence.class);
+				if (tmp instanceof CharSequence) return (CharSequence) tmp;
+			}
+			catch (PageException pe) {
+			}
+		}
 		return Caster.toString(obj);
 	}
 
 	public static CharSequence toCharSequence(Object obj, CharSequence defaultValue) {
 		if (obj instanceof CharSequence) return (CharSequence) obj;
+		if (obj instanceof Component) {
+			try {
+				Object tmp = Reflector.componentToClass(ThreadLocalPageContext.get(), (Component) obj, CharSequence.class);
+				if (tmp instanceof CharSequence) return (CharSequence) tmp;
+			}
+			catch (PageException pe) {
+			}
+		}
+
 		String str = Caster.toString(obj, null);
 		if (str == null) return defaultValue;
 		return str;
@@ -4944,5 +5210,10 @@ public final class Caster {
 		c.set(Calendar.MONTH, m);
 		c.set(Calendar.DAY_OF_MONTH, d);
 		return c.getTimeInMillis();
+	}
+
+	public static Number negate(Number n) {
+		if (n instanceof BigDecimal) return ((BigDecimal) n).negate();
+		return Double.valueOf(-n.doubleValue());
 	}
 }
