@@ -42,7 +42,17 @@ public final class LitLongImpl extends ExpressionBase implements LitLong {
 
 	@Override
 	public Long getLong() {
-		return new Long(l);
+		return Long.valueOf(l);
+	}
+
+	@Override
+	public Number getNumber() {
+		return getLong();
+	}
+
+	@Override
+	public Number getNumber(Number dv) {
+		return getLong();
 	}
 
 	@Override
@@ -62,15 +72,6 @@ public final class LitLongImpl extends ExpressionBase implements LitLong {
 	 */
 	public boolean getBooleanValue() {
 		return Caster.toBooleanValue(l);
-	}
-
-	@Override
-	public Double getDouble(Double defaultValue) {
-		return getDouble();
-	}
-
-	private Double getDouble() {
-		return new Double(l);
 	}
 
 	@Override
